--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DesighKotlin">
+        android:theme="@style/Theme.DesighKotlin.myTheme">
         <activity
             android:name=".view.MainActivity"
             android:exported="true">
