--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         </activity>
 
         <activity
-            android:name=".planets.APIBottomActivity$ApiBottomActivity"
+            android:name=".planets.ApiBottomActivity"
             android:exported="true">
 
         </activity>
